--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
       <meta charset="utf-8" name="author" content="Carlos Vinicios">
       <meta name="author" content="Carlos Vinicios">
       <meta name="description" content="Primeira pagina web">
-      <title>Vinicios</title>
-  </head>
-  <body>
+      <link rel="stylesheet" href="css/style.css">
+      <link href="https://fonts.googleapis.com/css?family=Krub" rel="stylesheet">
 
-    <h1>Minha primeira página web</h1>
-      <img src="image/bob.jpg" alt="Vinicios">
-      <p>Sou Carlos Vinicios, formado em gestão da tecnologia da informação.</p>
-      <p>Migrar de setor dentro da área de tecnologia da informação visando novas experiências e aprendizado.</p>
+
+  <title>Vinicios</title>
+  </head>
+  <body class="background">
+
+    <h1 class="posi-centro titulo">Minha primeira página web</h1>
+      <img class="borda-imagem img-center" src="image/bob.jpg" alt="Vinicios">
+      <p class="posi-centro">Sou Carlos Vinicios, formado em gestão da tecnologia da informação.</p>
+      <p class="posi-centro">Migrar de setor dentro da área de tecnologia da informação visando novas experiências e aprendizado.</p>
 
 <p>Contato:</p>
   <ul>
